# python_tdd_project

./: Makefile  docker-compose.yml  pyproject.toml
src/: main.py
src/infra/: config.py
src/infra/db/: mongo.py
src/infra/exceptions/: exceptions.py
src/infra/schemas/: base.py  product.py
src/tests/: conftest.py  factories.py
src/tests/schemas/: test_product.py
src/tests/usecases/: test_product.py
src/usecases/: product.py
