[tool.poetry]
name = "tdd project"
version = "0.1.0"
description = ""
authors = ["Junio Cruz <junio.souza_cruz@outlook.com>"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.30.1"
motor = "^3.4.0"
fastapi = "0.111.0"
pydantic = "^2.7.3"
pydantic-settings = "2.3.0"
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
